tests/reference/asr-test_str_indexing-b200a4e.stderr
semantic error: Type mismatch in index, expected a single integer or slice
 --> tests/errors/test_str_indexing.py:4:13
  |
4 |     print(s[1.2])
  |             ^^^ type mismatch (found: 'f64', expected: 'i32' or slice)


Note: Please report unclear or confusing messages as bugs at
https://github.com/lcompilers/lpython/issues.
